Bug 124172 - Non working dialog - Extras > Spellcheck..
Summary: Non working dialog - Extras > Spellcheck..
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: iOS Editor (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other iOS
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-18 15:25 UTC by Nicolas Christener
Modified: 2019-10-22 06:58 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Christener 2019-03-18 15:25:57 UTC
Description:
The dialog to check the spelling doesn't show up in the iOS app.

Steps to Reproduce:
1. Create/open a document in the iOS app
2. Click the menu entry "Extras > Spellchecking"

Actual Results:
The dialog to check the spelling doesn't show up.

Expected Results:
The dialog to check the spelling should show up.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Aron Budea 2019-03-18 23:17:45 UTC
While no dictionaries seem to be bundled with the app currently, the dialog should still open afaik (though it'd be non-functional).
Comment 2 Commit Notification 2019-03-25 13:28:48 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/2e28b198007b525ee66b9864677acdd8ff0d85c7%5E%21

tdf#124172: Use the MacOSXSpell library on iOS, too

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2019-03-25 16:02:08 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/317fa411b91c7b4db4124356fc8d3bd4da1ea1e7%5E%21

tdf#124172: Remove DESKTOP ifdef as the code is needed for tunnelled dialogs

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 How can I remove my account? 2019-03-25 16:10:33 UTC
With the above changes the dialog does show up, and spell checking even works. (It uses the system-provided dictionaries.)
Comment 5 Martin Srebotnjak 2019-10-22 06:58:06 UTC
Since iOS does not support all languages that LO is properly localized into (and includes their spell-check languages), this solution will hopefully not be viewed as final and fixed!