tdf#124172: Use the MacOSXSpell library on iOS, too

The code needed just a small amount of ifdefs to use UITextChecker on
iOS instead of NSSpellChecker.

Change-Id: I19edfffd3cc317a79beacc0b94668a6fd5ea3b32