lingucomponent/source/spellcheck/macosxspell/macspellimp.hxx
@@ -22,12 +22,14 @@
 
 #include <cppuhelper/implbase.hxx>
 
-#ifdef MACOSX
 #include <premac.h>
+#ifdef MACOSX
 #include <Carbon/Carbon.h>
 #import <Cocoa/Cocoa.h>
-#include <postmac.h>
+#else
+#include <UIKit/UIKit.h>
 #endif
+#include <postmac.h>
 #include <com/sun/star/lang/XComponent.hpp>
 #include <com/sun/star/lang/XInitialization.hpp>
 #include <com/sun/star/lang/XServiceDisplayName.hpp>
@@ -62,8 +64,11 @@ class MacSpellChecker :
     Locale *                aDLocs;
     OUString *              aDNames;
     sal_Int32               numdict;
+#ifdef MACOSX
     int                     macTag;   // unique tag for this doc
-
+#else
+    UITextChecker *         pChecker;
+#endif
     ::comphelper::OInterfaceContainerHelper2       aEvtListeners;
     Reference< XPropertyChangeListener >    xPropHelper;
     linguistic::PropertyHelper_Spell *      pPropHelper;
@@ -79,6 +84,7 @@ class MacSpellChecker :
     }
 
     sal_Int16   GetSpellFailure( const OUString &rWord, const Locale &rLocale );
+    Reference< XSpellAlternatives > GetProposals( const OUString &rWord, const Locale &rLocale );
 
 public:
     MacSpellChecker();
