lingucomponent/source/spellcheck/macosxspell/macspellimp.mm
@@ -54,10 +54,14 @@ MacSpellChecker::MacSpellChecker() :
     bDisposing = false;
     pPropHelper = nullptr;
     numdict = 0;
+#ifndef IOS
     NSApplicationLoad();
     NSAutoreleasePool* pool = [[NSAutoreleasePool alloc] init];
     macTag = [NSSpellChecker uniqueSpellDocumentTag];
     [pool release];
+#else
+    pChecker = [[UITextChecker alloc] init];
+#endif
 }
 
 
@@ -109,7 +113,11 @@ Sequence< Locale > SAL_CALL MacSpellChecker::getLocales()
         // TODO How on macOS?
 
         // invoke a second  dictionary manager to get the shared dictionary list
+#ifdef MACOSX
         NSArray *aSpellCheckLanguages = [[NSSpellChecker sharedSpellChecker] availableLanguages];
+#else
+        NSArray *aSpellCheckLanguages = [UITextChecker availableLanguages];
+#endif
 
         for (NSUInteger i = 0; i < [aSpellCheckLanguages count]; i++)
         {
@@ -332,8 +340,12 @@ sal_Int16 MacSpellChecker::GetSpellFailure( const OUString &rWord, const Locale 
             aLang = [aLang  stringByAppendingString:aTaggedCountry];
         }
 
+#ifdef MACOSX
         NSInteger aCount;
         NSRange range = [[NSSpellChecker sharedSpellChecker] checkSpellingOfString:aNSStr startingAt:0 language:aLang wrap:false inSpellDocumentWithTag:macTag wordCount:&aCount];
+#else
+        NSRange range = [pChecker rangeOfMisspelledWordInString:aNSStr range:NSMakeRange(0, [aNSStr length]) startingAt:0 wrap:NO language:aLang];
+#endif
         int rVal = 0;
         if(range.length>0)
         {
@@ -394,10 +406,8 @@ sal_Bool SAL_CALL
     return (nFailure == -1);
 }
 
-namespace {
-
 Reference< XSpellAlternatives >
-    GetProposals( const OUString &rWord, const Locale &rLocale )
+    MacSpellChecker::GetProposals( const OUString &rWord, const Locale &rLocale )
 {
     // Retrieves the return values for the 'spell' function call in case
     // of a misspelled word.
@@ -432,8 +442,12 @@ Reference< XSpellAlternatives >
             NSString* aTaggedCountry = [@"_" stringByAppendingString:aCountry];
             aLang = [aLang  stringByAppendingString:aTaggedCountry];
         }
+#ifdef MACOSX
         [[NSSpellChecker sharedSpellChecker] setLanguage:aLang];
         NSArray *guesses = [[NSSpellChecker sharedSpellChecker] guessesForWordRange:NSMakeRange(0, [aNSStr length]) inString:aNSStr language:aLang inSpellDocumentWithTag:0];
+#else
+        NSArray *guesses = [pChecker guessesForWordRange:NSMakeRange(0, [aNSStr length]) inString:aNSStr language:aLang];
+#endif
         count = [guesses count];
         if (count)
         {
@@ -457,8 +471,6 @@ Reference< XSpellAlternatives >
     pAlt->SetAlternatives( aStr );
     xRes = pAlt;
     return xRes;
-
-}
 
 }
 
